--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
-    <link rel="stylesheet" href="/css/style.css">
-    <link rel="stylesheet" href="/css/media.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/media.css">
 </head>
 
 <body>
@@ -36,7 +36,7 @@
     <section class="main-section">
         <div class="main-container">
             <div class="div-card">
-                <img src="/image/photo.jpg" alt="Developer">
+                <img src="image/photo.jpg" alt="Developer">
             </div>
             <div class="div-myself">
                 <h2 class="about-me">About Me</h2>
@@ -62,7 +62,7 @@
         <div class="main-division">
             <div class="divide">
                 <div class="image-logo">
-                    <img src="/image/tolls1.jpg" alt="logo">
+                    <img src="image/tolls1.jpg" alt="logo">
                 </div>
                 <h3 class="enginer">Web Design</h3>
                 <p class="passage">Lorem ipsum dolor sit amet consectetur Hic,
@@ -73,7 +73,7 @@
             </div>
             <div class="divide">
                 <div class="image-logo">
-                    <img src="/image/toll2.jpg" alt="logo">
+                    <img src="image/toll2.jpg" alt="logo">
                 </div>
                 <h3 class="enginer">UI/UX Design</h3>
                 <p class="passage">Lorem ipsum dolor sit amet consectetur Hic
@@ -84,7 +84,7 @@
             </div>
             <div class="divide">
                 <div class="image-logo">
-                    <img src="/image/tolls3.jpg" alt="logo">
+                    <img src="image/tolls3.jpg" alt="logo">
                 </div>
                 <h3 class="enginer">App Design</h3>
                 <p class="passage">Lorem ipsum dolor sit amet consectetur Hic,
@@ -101,13 +101,13 @@
             <br>
             <div class="mobile-work">
                 <div class="app-development">
-                    <img src="/image/mobile.jpg" alt="mobile">
+                    <img src="image/mobile.jpg" alt="mobile">
                 </div>
                 <div class="app-development">
-                    <img src="/image/mobile.jpg" alt="mobile">
+                    <img src="image/mobile.jpg" alt="mobile">
                 </div>
                 <div class="app-development">
-                    <img src="/image/mobile.jpg" alt="mobile">
+                    <img src="image/mobile.jpg" alt="mobile">
                 </div>
             </div>
             <div class="button-div">
